# LLMGenerationDialogue

./: .gitignore  README.md  pyproject.toml
inference/: __main__.py  config.yaml  utils.py
train/: __main__.py  config.yaml  model.py  utils.py
