[tool.poetry]
name = "aug-llm"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.8"
tqdm = "^4.65.0"
pandas = "^2.0.3"
bitsandbytes = "^0.40.1.post1"
transformers = "^4.30.2"
datasets = "^2.13.1"
scipy = "1.10.1"
wandb = "^0.15.7"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
